# go-helloworld

./: .gitignore  README.md  defer_tracing.go  effective.go.md  factory_func.go  fibonacci.go  function_calls_function.go  global_scope.go  go-helloworld.go  go_helloworld.go  gostudy.go  ifelse.go  langstudy.code-workspace  main.go  mult_returnval.go  multiple_return.go  simple_function.go  tcp_sample.go  varnumpar.go
arraytype/: arraytype.go
authorizemontage/: auth.go
basictypes/: basictypes.go
channel/: channeldemo.go
clangstudy/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  main.c  singlechainreverse.c
clangstudy/singlechainrev/: CMakeLists.txt  Makefile  singlechainreverse.c  singlechainreverse.h
codegame/: Makefile  asciiart.c  chucknorris.c  horseracing.c  marslander-l1.c  mimetype.c  testmain  testmain.c
familyitem/: itembase.java  itemimage.java  itemlist.md
forgrammer/: forgrammer.go
function/: functions.go
gitsync/: gitsync  gitsync.go  syncfolder.go
gostudy/: .gitignore  effective.go.md  go.sum  gostudy.code-workspace  gostudy.go
gostudy/TourGo/: hello.go  (+3 more)
interfaces/: human.go
javastudy/: abstractinherintance.java  boxdemo.java  exception.java  interfaces.java  simpleinheritance.java  stack.java  study.java
makingslices/: makingslices.go
maps/: maps.go
namedresults/: namedresults.go
newmatch/: sqrt.go
runtime/: goruntime.go
slice/: slice.go
sliceslice/: sliceslice.go
structpointer/: structpointer.go
switchsample/: switchsample.go
(+96 files in other folders)
